--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,11 @@ body {
   padding: 0;
 }
 
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
 .main{
   font-family: "inter",sans-serif;
   background-color:#2a3447;
