--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,25 +1,27 @@
 .navbar{
-    width:100%;
     padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
+
 
 .logo{
     display: flex;
     align-items: center;
     font-weight: bold;
     gap: 10px;
+    img{
+        height: 18px;
 }
-
+}
 .icons{
     display: flex;
     align-items: center;
-    gap: 20px;
-}
+    gap: 16px;
+    height: 24px;
 
-.notifications{
+
+.notification{
     position: relative;
     span{
         background-color: red;
@@ -40,7 +42,7 @@
 .user{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
     img{
         width: 26px;
         height: 26px;
@@ -48,4 +50,5 @@
         object-fit: cover;
     }
 }
-
+}
+}
