--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -9,6 +9,7 @@
         font-size: 12px;
         font-weight: 200;
         color: #ddd;
+        text-transform: uppercase;
     }
 
     .listItem{
