--- a/src/pages/users/users.scss
+++ b/src/pages/users/users.scss
@@ -1,3 +1,14 @@
 .users{
-    background-color: red;
+
+    .info{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 5px;
+
+        button{
+            padding: 3px;
+            cursor: pointer;
+        }
+    }
 }
