--- a/src/components/dataTable/dataTable.scss
+++ b/src/components/dataTable/dataTable.scss
@@ -1,29 +1,23 @@
 .dataTable {
   .dataGrid {
     background: white;
-    padding: 20px;
+    padding: 10px;
   }
 
-  .MuiDataGrid-toolbarContainer{
+  .MuiDataGrid-toolbarContainer {
     flex-direction: row-reverse;
   }
 
-  img{
-    width:32px;
-    height:32px;
+  img {
+    width: 32px;
+    height: 32px;
     border-radius: 50%;
     object-fit: cover;
-
   }
 
-  .action{
+  .action {
     display: flex;
-    // gap: 15px;
-
-    img{
-        // width: 20px;
-        // height: 20px;
-        cursor: pointer;
-    }
+    gap: 15px;
+    cursor: pointer;
   }
 }
