feat: implement Add component for adding new products and users; update Products and Users pages to include Add functionality

--- a/src/pages/products/products.scss
+++ b/src/pages/products/products.scss
@@ -1,2 +1,14 @@
-.products{
+.products {
+    padding-left: 10px;
+  .info {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 5px;
+
+    button {
+      padding: 5px;
+      cursor: pointer;
+    }
+  }
 }
