--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -11,7 +11,6 @@
       color: #ddd;
       text-transform: uppercase;
     }
-
     .listItem {
       display: flex;
       align-items: center;
@@ -21,6 +20,20 @@
 
       &:hover {
         background-color: #384256;
+      }
+    }
+  }
+  @media (max-width: 480px) {
+    width: 50px;
+    .item {
+      .title {
+        display: none;
+      }
+      .listItem {
+        justify-content: center;
+        .listItemTitle {
+          display: none;
+        }
       }
     }
   }
