--- a/src/components/topBox/topBox.scss
+++ b/src/components/topBox/topBox.scss
@@ -1,47 +1,50 @@
-.topBox{
-    h1{
-        margin-top: 0;
-        margin-bottom: 20px;
-    }
-    .list{
+.topBox {
+  h1 {
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+  .list {
+    .listItem {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 30px;
+      flex-wrap: wrap;
 
-        .listItem{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 30px;
+      .user {
+        display: flex;
+        gap: 20px;
 
-            .user{
-                display: flex;
-                gap: 20px;
-
-                img{
-                    width: 40px;
-                    height: 40px;
-                    border-radius: 50%;
-                    object-fit: cover;
-                }
-
-                .userTexts{
-                    display: flex;
-                    flex-direction: column;
-                    gap: 5px;
-
-                    .username{
-                        font-size: 14px;
-                        font-weight: 500;
-
-                    }
-
-                    .email{
-                        font-size: 12px;
-
-                    }
-                }
-            }
-            .amount{
-                font-weight: 500;
-            }
+        img {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          object-fit: cover;
         }
+
+        .userTexts {
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+
+          .username {
+            font-size: 14px;
+            font-weight: 500;
+          }
+
+          .email {
+            font-size: 12px;
+          }
+        }
+      }
+      .amount {
+        font-weight: 500;
+      }
     }
+  }
+  @media (max-width: 480px) {
+    .user {
+      gap: 10px;
+    }
+  }
 }
